--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-	"functionHeaderExtension.headerFilePath": "/home/abonneau/Documents/projects/libft/libft.h"
+	"functionHeaderExtension.headerFilePath": "/home/abonneau/Documents/projects/libft/libft.h",
+	"files.associations": {
+		"string.h": "c",
+		"libft.h": "c"
+	}
 }
